Fixed Style FLow of the image wont fit the screen on mobile devices well

--- a/src/styles/interface.scss
+++ b/src/styles/interface.scss
@@ -1,10 +1,8 @@
 .mk__interface {
-  @include flex(space-between, center);
+  @include flex(center, center);
 
   max-width: 1350px;
-  margin: 200px auto 0;
-
-  height: 270px;
+  margin: 100px auto 0;
 
   padding: 0 4rem;
   @media (max-width: 550px) {
@@ -18,6 +16,7 @@
   &--info {
     flex: 1;
     @include flex(space-between, center);
+
     height: 100%;
     margin-right: 20px;
 
@@ -47,7 +46,7 @@
     background-color: $white-color;
 
     width: 10px;
-    height: 100%;
+    height: 270px;
 
     border-radius: 50px;
     margin-right: 30px;
@@ -58,18 +57,20 @@
   &--image {
     flex: 1;
     @include flex(flex-end, flex-end);
+    height: 271px;
 
     @media (max-width: 997px) {
-      flex: 0;
+      @include flex(center, center);
 
       width: 100%;
       margin-top: 100px;
 
-      @include flex(center, center);
+      img {
+        width: 100%;
+      }
     }
 
     img {
-      width: 100%;
       height: 100%;
     }
   }
