--- a/src/styles/webAi.scss
+++ b/src/styles/webAi.scss
@@ -1,10 +1,8 @@
 .mk__webAi {
-  @include flex(space-between, center);
+  @include flex(center, center);
 
   max-width: 1350px;
-  margin: 200px auto 0;
-
-  height: 270px;
+  margin: 100px auto 0;
 
   padding: 0 4rem;
   @media (max-width: 550px) {
@@ -17,8 +15,8 @@
 
   &--info {
     flex: 1;
-    @include flex(space-between, center);
-    height: 100%;
+    @include flex(center, center);
+
     margin-right: 20px;
 
     .text {
@@ -47,7 +45,7 @@
     background-color: $white-color;
 
     width: 10px;
-    height: 100%;
+    height: 271px;
 
     border-radius: 50px;
     margin-right: 30px;
@@ -57,19 +55,22 @@
 
   &--image {
     flex: 1;
-    @include flex(flex-end, flex-end);
+    @include flex(flex-start, flex-start);
+
+    height: 371px;
 
     @media (max-width: 997px) {
-      flex: 0;
+      @include flex(center, center);
 
       width: 100%;
-      margin: 300px 0 100px;
+      margin: 0px 0 100px;
 
-      @include flex(center, center);
+      img {
+        width: 100%;
+      }
     }
 
     img {
-      width: 100%;
       height: 100%;
     }
   }
